[gd_scene load_steps=4 format=3 uid="uid://cyve4ulxke7v5"]

[ext_resource type="Script" uid="uid://rb1gc3jvkv86" path="res://scene/ui/upgrade_menu/upgrade_opt.gd" id="1_64jod"]
[ext_resource type="Resource" uid="uid://bvqaqonm4s6wh" path="res://scene/resources/upgrade_folder/NullUpgrade.tres" id="2_jvdxg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f3rpl"]

[node name="UpgradeOpt" type="Control"]
custom_minimum_size = Vector2(164, 200)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_64jod")
base_null_upgrade = ExtResource("2_jvdxg")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.5
offset_right = 1.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="UpgradeLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 17
text = "Upgrade Title"

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 13

[node name="StatsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "Stats"

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
theme_override_styles/separator = SubResource("StyleBoxEmpty_f3rpl")

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 65)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="DesLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(155, 125)
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "hola hola hola hola hola hola"
autowrap_mode = 2

[node name="HSeparator3" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 18
theme_override_styles/separator = SubResource("StyleBoxEmpty_f3rpl")

[node name="Button" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Comprar por 50"
